[B] Fix overflowing text - Resolves #PROJ-146

--- a/src/scss/modules/_main-wrapper.scss
+++ b/src/scss/modules/_main-wrapper.scss
@@ -8,4 +8,11 @@
     );
     margin: 0 auto;
   }
+
+  .container {
+    @media (min-width: 997px) and (max-width: 1320px) {
+      max-width: calc(100vw - var(--doc-sidebar-width));
+      margin: 0;
+    }
+  }
 }
